--- a/childpages/childpages/childTemplate.html
+++ b/childpages/childpages/childTemplate.html
@@ -6,11 +6,12 @@
 
         <title>Child page Template</title>
 
-        <meta>
-        <meta>
-        <meta>
-        <meta>
+        <meta name="author" content="AY">
+        <meta name="description" content="Child Page Template Learning HTML by building simple website">
+        <meta name="keywords" content="child template boilerplate stater code HTML learning">
+        <meta name="viewport" content="width=device-device-width, initial-scale=1.0">
         
+
     </head>
     <body></body>
     <footer></footer>
