--- a/childpages/childTemplate.html
+++ b/childpages/childTemplate.html
@@ -27,6 +27,19 @@
 
     </head>
     
-    <body></body>
-    <footer></footer>
+    <body>
+        <header>Header</header>
+        <nav>Navigation</nav>
+        <aside>Aside</aside>
+        <main>Main</main>
+        <section>Section</section>
+        <article>Article</article>
+        <footer>Footer</footer>
+    </body>
+
+    <footer>
+        <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
+            <!-- Date Accessed 20220919 -->
+        </blockquote>
+    </footer>
 </html>
