--- a/childpages/Subscript and Superscript Tags.html
+++ b/childpages/Subscript and Superscript Tags.html
@@ -4,11 +4,11 @@
         <!-- Used by the Keyboard -->
         <meta charset="utf-8">
 
-        <title>Child Page Template</title>
+        <title>Sub & Superscripts</title>
 
         <meta name="author" content="Mark Mercer">
-        <meta name="description" content="Child Page Template Learning HTML by building simple website">
-        <meta name="keywords" content="child template boilerplate starter code HTML learning">
+        <meta name="description" content="Learning HTML by building simple website">
+        <meta name="keywords" content="boilerplate starter code HTML learning subscript superscript">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Content give value for name or http-equiv attribute, text entry in string or array string -->
 
@@ -28,13 +28,18 @@
     </head>
     
     <body>
-        <header>Header</header>
-        <nav>Navigation</nav>
-        <aside>Aside</aside>
-        <main>Main</main>
-        <section>Section</section>
-        <article>Article</article>
-        <footer>Footer</footer>
+        <header><h1 style="font-size:4vw">Viewing Subscript and Superscript Tags using Viewport</h1></header>
+        <nav></nav>
+        <aside></aside>
+        <main></main>
+        <section>
+            <h1 style="font-size:3vw">An example sentence with all the letters of the alphebet.</h1>
+            <article>
+                <h1 style="font-size:2vw">The quick brown fox jumps over the lazy dog.</h1>
+            </article>
+        </section>
+        <article></article>
+        <footer></footer>
     </body>
 
     <footer>
