--- a/childpages/Image Lesson.html
+++ b/childpages/Image Lesson.html
@@ -4,11 +4,11 @@
         <!-- Used by the Keyboard -->
         <meta charset="utf-8">
 
-        <title>Child Page Template</title>
+        <title>Image</title>
 
         <meta name="author" content="Mark Mercer">
-        <meta name="description" content="Child Page Template Learning HTML by building simple website">
-        <meta name="keywords" content="child template boilerplate starter code HTML learning">
+        <meta name="description" content="Learning HTML by building simple website">
+        <meta name="keywords" content="boilerplate starter code HTML learning image">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Content give value for name or http-equiv attribute, text entry in string or array string -->
 
@@ -28,6 +28,11 @@
     </head>
     
     <body>
+        <p>
+            Two URLs to use in my lesson
+            1. https://i.etsystatic.com/27370119/r/il/f13eda/3416879984/il_570xN.3416879984_5suo.jpg
+            2. https://i.etsystatic.com/27370119/r/il/f13eda/3416879984/il_794xN.3416879984_5suo.jpg
+        </p>
         <header>Header</header>
         <nav>Navigation</nav>
         <aside>Aside</aside>
