--- a/childpages/flexbox.html
+++ b/childpages/flexbox.html
@@ -49,6 +49,6 @@
                 Mitch Kapor</a>
             </em>
         </p>
-        <p>&copy Mark Mercer, powered by MercersKitchen in GitHub</p>
+        <p>&copy AY Olaniyan, powered by AY Olaniyan in GitHub</p>
     </footer>
 </html>
