--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <!-- Used by the Keyboard -->
         <meta charset="utf-8">
 
-        <title>Child Page Template</title>
+        <title>Splash Page, Learning HTML</title>
 
         <meta name="author" content="Mark Mercer">
-        <meta name="description" content="Child Page Template Learning HTML by building simple website">
-        <meta name="keywords" content="child template boilerplate starter code HTML learning">
+        <meta name="description" content="First Webpage Learning HTML by building simple website">
+        <meta name="keywords" content="boilerplate starter code HTML learning">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Content give value for name or http-equiv attribute, text entry in string or array string -->
 
@@ -23,21 +23,48 @@
         <!-- meta http-equiv="content-type" content="text/html; charset=UTF-8" -->
         <!-- Already specified in the charset above-->
 
+        <style>
+            //divHeader {border: thin dotted red;}
+            //div {border: thin dotted rgb(0, 255, 4);}
+        </style>
+
         <noscript>Running JavaScript is not necessary in the HTML Page ... FYI: your Feature to execute scripts is turned off</noscript>
 
     </head>
     
     <body>
-        <header>Header</header>
-        <nav>Navigation</nav>
-        <aside>Aside</aside>
-        <main>Main</main>
-        <section>Section</section>
-        <article>Article</article>
-        <footer>Footer</footer>
+        <header><div><divHeader><h1 style="font-size:5.5vw">Learning HTML</h1></divHeader></div></header>
+        <nav><div>
+            <header style="font-size:3vw">Navigation</header>
+            <section>
+                <header style="font-size:2vw">Various Pages</header>
+                <ul style="list-style-type:square; font-size:0.75vw">
+                    <li> Meta Data Example: <a href="childPages/Meta Data Example.html" target="_blank">Open this in ATOM to see meta data changes :)</a>
+                    <li> Footer Blockquote Example: <a href="childPages/Footer Blockquote Example.html" target="_blank">click here</a>
+                    <li> Template Exemplar: <a href="childPages/childTemplate.html" target="_blank">click here</a>
+                    <li> Headings and Paragraph Tags: <a href="childPages/Headings and Paragraph Tags.html" target="_blank">click here</a>
+                    <li> Subscript and Superscript Tags: <a href="childPages/Subscript and Superscript Tags.html" target="_blank">click here</a>
+                    <li> Image Lesson: <a href="childPages/Image Lesson.html" target="_blank">click here</a>
+                    <li> Laying out DIVs (using HTML Boilerplate): <a href="childPages/Laying out DIVs.html" target="_blank">click here</a>
+                    <li> What this index page might look like with Flexbox: <a href="childPages/Flexbox.html" target="_blank">click here</a>
+                </ul>
+            </section>
+        </div></nav>
+        <aside></aside>
+        <main>
+            <div>
+                <h1 style="font-size:3vw">
+                Use the main-section-article sections to 
+                summarize the lessons learned in the links.
+                </h1>
+            </div>
+        </main>
+        <section></section>
+        <article></article>
+        <footer></footer>
     </body>
 
-    <footer>
+    <div><footer>
         <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
             <!-- Date Accessed 20220919 -->
         </blockquote>
@@ -50,5 +77,5 @@
             </em>
         </p>
         <p>&copy Mark Mercer, powered by MercersKitchen in GitHub</p>
-    </footer>
+    </footer></div>
 </html>
