--- a/childpages/Meta Data Example.html
+++ b/childpages/Meta Data Example.html
@@ -49,6 +49,6 @@
                 Mitch Kapor</a>
             </em>
         </p>
-        <p>&copy Mark Mercer, powered by MercersKitchen in GitHub</p>
+        <p>&copy Ay Olaniyan, powered by Ay Olaniyan  in GitHub</p>
     </footer>
 </html>
