--- a/childpages/Subscript and Superscript Tags.html
+++ b/childpages/Subscript and Superscript Tags.html
@@ -60,6 +60,6 @@
                 Mitch Kapor</a>
             </em>
         </p>
-        <p>&copy Mark Mercer, powered by MercersKitchen in GitHub</p>
+        <p>&copy Ay Olaniyan, powered by Ay Olaniyan  in GitHub</p>
     </footer>
 </html>
