--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <!-- Already specified in the charset above-->
 
         <style>
+            body{
+                background-color:rosybrown; 
+                color: black;
+            } 
             //divHeader {border: thin dotted red;}
             //div {border: thin dotted rgb(0, 255, 4);}
         </style>
@@ -34,9 +38,11 @@
     
     <body> 
         <h2>Music</h2>
-        <p>
+        <p> I play the home place i can go and have included a sample recording on this page.</p>
             <audio controls>
-                <source src="audio/TOBI.mp3" type="audio/mpeg">
+                <source src="audio/home place where i can go.mp3" type="audio/mpeg">
+                <source src="audio/home place where i can go.ogg" type="audio/ogg">
+                <a href="audio/home place i can go.mp3"></a> home place i can go audio recording</a>
             </audio>
 
         <header><div><divHeader><h1 style="font-size:5.5vw">Learning HTML</h1></divHeader></div></header>
